--- a/templates/mijn-applicatieprofiel-ap.j2
+++ b/templates/mijn-applicatieprofiel-ap.j2
@@ -1,9 +1,7 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>Vul hier een samenvatting van mijn applicatieprofiel in.</p>
-{% endblock %}
-
-{% block status %}
-<p>(Verwijder dit blok om een geautomatiseerde standaardparagraaf te laten verschijnen.)</p>
+<p>Dit applicatieprofiel dient als weergave van het stapsgewijs proces rond het maken, verwerken en interpreteren van thermografische scans.</p>
+<p>De interpretatie kan zowel manueel gebeuren, maar dankzij het gebruik van AI kan dit ook geautomatiseerd verlopen. Dit traject, ThermAI, had dan ook bijzondere aandacht voor deze automatisatie. Dit traject werd opgezet door de <a href="https://www.wvi.be/">West-Vlaamse Intercommunale (WVI)</a> en ondersteund door <a href="https://www.brugge.be/">Stad Brugge</a>.</p> 
+<p>Een van de centrale klassen in dit model is de klasse 'Observatie', dewelke werd overgenomen uit 
 {% endblock %}
